--- a/NZWalks.CrossCutting.IoC/NZWalks.CrossCutting.IoC.csproj
+++ b/NZWalks.CrossCutting.IoC/NZWalks.CrossCutting.IoC.csproj
@@ -7,17 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="DTOs\DifficultyDto.cs" />
-    <Compile Remove="DTOs\WalkDto.cs" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NZWalks.Domain\NZWalks.Domain.csproj" />
     <ProjectReference Include="..\NZWalks.Infrastructure\NZWalks.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Handlers\" />
   </ItemGroup>
 
 </Project>
